RESOLVED FIXED224249
REGRESSION (r275538): [ macOS ] TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion and TestWebKitAPI.SleepDisabler.Pause consistently failing
https://bugs.webkit.org/show_bug.cgi?id=224249
Summary REGRESSION (r275538): [ macOS ] TestWebKitAPI.WebKitLegacy.MediaPlaybackSleep...
Robert Jenner
Reported 2021-04-06 15:10:50 PDT
TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion TestWebKitAPI.SleepDisabler.Pause both started failing in macOS. HISTORY URL: https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.SleepDisabler.Pause&test=TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion
Attachments
Patch (5.17 KB, patch)
2021-04-06 16:44 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2021-04-06 15:12:28 PDT
Robert Jenner
Comment 2 2021-04-06 15:16:01 PDT
Was able to reproduce the failure at ToT using the following test: run-api-tests TestWebKitAPI.SleepDisabler.Pause --iterations 10 --child-process=1 The test also failed at r275538, but passed on the revision right before it. It appears the r275538 changeset caused the API failures: https://trac.webkit.org/changeset/275538/webkit
Ryan Haddad
Comment 3 2021-04-06 15:34:13 PDT
TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion 2021-04-06 15:11:37.882 TestWebKitAPI[1488:8689736] nil host used in call to allowsSpecificHTTPSCertificateForHost 2021-04-06 15:11:37.882 TestWebKitAPI[1488:8689736] nil host used in call to allowsAnyHTTPSCertificateForHost: 2021-04-06 15:11:37.951 TestWebKitAPI[1488:8689736] *** WARNING: Method convertPointToBase: in class NSView is deprecated on 10.7 and later. It should not be used in new applications. /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/mac/MediaPlaybackSleepAssertion.mm:179 Value of: hasAssertionType(CFSTR("PreventUserIdleDisplaySleep")) Actual: false Expected: true /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/mac/MediaPlaybackSleepAssertion.mm:192 Value of: hasAssertionType(CFSTR("PreventUserIdleSystemSleep")) Actual: true Expected: false TestWebKitAPI.SleepDisabler.Pause /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKit/SleepDisabler.mm:112 Expected equality of these values: shouldHaveSleepDisabler Which is: false [webView _hasSleepDisabler] Which is: '\x1' (1)
Eric Carlson
Comment 4 2021-04-06 16:44:36 PDT
EWS
Comment 5 2021-04-06 17:32:15 PDT
Committed r275574: <https://commits.webkit.org/r275574> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425336 [details].
Note You need to log in before you can comment on or make changes to this bug.